--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
   	</dependency>
   	<dependency>
   		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-data-jpa</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-test</artifactId>
   		<scope>test</scope>
   	</dependency>
@@ -32,7 +36,11 @@
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   	</dependency>
-  </dependencies>
+  	<dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  	</dependency>
+  </dependencies>  
   
   <build>
   	<plugins>
