--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password=123456
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+
+#Flyway configs
+flyway.url=jdbc:mysql://localhost:3306/
+flyway.schemas=db_udemy
+flyway.user=root
+flyway.password=123456
