--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,18 @@
   		<groupId>com.fasterxml.jackson.dataformat</groupId>
   		<artifactId>jackson-dataformat-yaml</artifactId>
   	</dependency>
+  	<!-- Gerador do swagger (EndPoints - gera a documentação mas sem uma boa formatação) -->
+  	<dependency>
+  		<groupId>io.springfox</groupId>
+  		<artifactId>springfox-swagger2</artifactId>
+  		<version>2.9.2</version>
+  	</dependency>
+  	<!-- Gerador do swagger (UI - ajuda a formatar) -->
+  	<dependency>
+  		<groupId>io.springfox</groupId>
+  		<artifactId>springfox-swagger-ui</artifactId>
+  		<version>2.9.2</version>
+  	</dependency>
   </dependencies>  
   
   <build>
