--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
-#Flyway configs
+#Flyway configs (Migration - Versionamento Banco de Dados)
 flyway.url=jdbc:mysql://localhost:3306/
 flyway.schemas=db_udemy
 flyway.user=root
 flyway.password=123456
+
+#Jackson configs (hateoas)
+#omite os atributos nulos nas serialização
+spring.jackson.default-property-inclusion=non_null
