--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,17 @@
   		<artifactId>springfox-swagger-ui</artifactId>
   		<version>2.9.2</version>
   	</dependency>
+  	<!-- Trabalhar com mecanismo de segurança do spring (usuario...senha) -->
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-security</artifactId>
+  	</dependency>
+  	<!-- Gerar o token para autenticação -->
+  	<dependency>
+  		<groupId>io.jsonwebtoken</groupId>
+  		<artifactId>jjwt</artifactId>
+  		<version>0.9.1</version>
+  	</dependency>
   </dependencies>  
   
   <build>
