Paginação, Upload de arquivos.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,10 @@ flyway.password=123456
 #Jackson configs (hateoas)
 #omite os atributos nulos nas serialização
 spring.jackson.default-property-inclusion=non_null
+
+#Trabalhar com arquivos
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+file.upload-dir=/Users/edils/OneDrive/curso java/udemy/project/UploadDir/
