--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
   		<artifactId>jjwt</artifactId>
   		<version>0.9.1</version>
   	</dependency>
+  	<!-- Lombok -->
+  	<dependency>
+	   <groupId>org.projectlombok</groupId>
+	   <artifactId>lombok</artifactId>
+	</dependency>
   </dependencies>  
   
   <build>
