--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db_udemy?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://db:3306/db_udemy?useTimezone=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=docker
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 #Flyway configs (Migration - Versionamento Banco de Dados)
-flyway.url=jdbc:mysql://localhost:3306/
+flyway.url=jdbc:mysql://db:3306/
 flyway.schemas=db_udemy
 flyway.user=root
-flyway.password=123456
+flyway.password=docker
 
 #Jackson configs (hateoas)
 #omite os atributos nulos nas serialização
